# bitbucket-cli

./: .env.example  .gitignore  README.md  pyproject.toml
bitbucket_cli/: __init__.py  __main__.py  cli.py  client.py  config.py  errors.py  service.py
tests/: test_cli.py  test_client.py  test_service.py
