[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bitbucket-cli"
version = "0.1.0"
description = "CLI for Bitbucket Cloud REST API (projects, repos, permissions, branch rules)"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
  "httpx>=0.27,<1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8,<9",
]

[project.scripts]
bitbucket-cli = "bitbucket_cli.cli:main"

[tool.setuptools]
packages = ["bitbucket_cli"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
